Final midnight commit

--- a/homework/calculus-1-homework.ipynb
+++ b/homework/calculus-1-homework.ipynb
@@ -60,10 +60,27 @@
    "source": [
     "#### Prove that:\n",
     "For every metric space (X, d):\n",
-    "- For eny $\\mathcal{U} = \\{U | U$ is open in $(X, d)\\}$ holds $\\bigcup_{U \\in \\mathcal{U}} U$ is open in $(X, d)$\n",
-    "- For eny two $U, V \\subset X$ open in $(X, d)$ holds: $U \\cap V$ is open in $(X, d)$\n",
+    "- For any $\\mathcal{U} = \\{U | U$ is open in $(X, d)\\}$ holds $\\bigcup_{U \\in \\mathcal{U}} U$ is open in $(X, d)$\n",
+    "\n",
+    "Lets take $x \\in \\bigcup_{i \\in I}U_i$. Then the $x \\in U_{j}$ for some $j \\in I$. Therefore $x$ is an element of an open set and $\\exists \\epsilon \\gt : B_{\\epsilon}(x)$ and this open ball is a subset of $U_{j}$. and $U_{j} \\subseteq \\bigcup_{U\\in \\mathcal{U}} U_i$. Consecuently it means that the union is also open.\n",
+    "\n",
+    "\n",
+    "- For any two $U, V \\subset X$ open in $(X, d)$ holds: $U \\cap V$ is open in $(X, d)$\n",
+    "\n",
+    "\n",
+    "Let's say there exists such $ r_1$ and  $r_2$ that $ B(x, r_1) \\subset U,  B(x, r_2) \\subset V $\n",
+    "\n",
+    "$r := \\min \\{r_1, r_2 \\} \\Longrightarrow B(x, r) \\subset U \\land B(x, r) \\subset V \\rightarrow  B(x, r) \\subset U \\cap V $ hence $  U \\cap V $ is open\n",
+    "\n",
     "- $X$ is open in $(X, d)$\n",
-    "- $\\emptyset$ is open in $(X, d)$"
+    "\n",
+    "Let $x \\in X$. The open ball of $x$ in $(X,d)$ is a subset of $X$, by definition of open set. This means that  X is open in $(X,d)$.\n",
+    "\n",
+    "\n",
+    "- $\\emptyset$ is open in $(X, d)$\n",
+    "\n",
+    "\n",
+    "Empty set is open because every point in empty set is an interior point. And by definition there are no points in an empty set."
    ]
   },
   {
@@ -71,7 +88,13 @@
    "metadata": {},
    "source": [
     "#### Prove that:\n",
-    "- For eny finity set $(U)_{i=1}^{n}$ of open sets in $(X, d)$, $\\bigcap_{i=1}^{n}U$ is open in $(X, d)$"
+    "- For eny finity set $(U)_{i=1}^{n}$ of open sets in $(X, d)$, $\\bigcap_{i=1}^{n}U$ is open in $(X, d)$\n",
+    "\n",
+    "\n",
+    "Let's say there exists such $𝑟_1, r_2, …, 𝑟_n  that   B(x, r_1) \\subset U_1,  B(x, r_2) \\subset U_2 \\dots $\n",
+    "$r := \\min \\{r_1, r_2, r_3, \\dots , r_n \\} $  =>\n",
+    "\n",
+    "=>  $B(x, r) \\subset (U)_{i=1}^{n} \\rightarrow \\bigcap_{i=1}^{n}U$ is open in $(X, d)$\n"
    ]
   },
   {
@@ -85,7 +108,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prove that, closed ball is closed subset in $(X, d)$\n"
+    "#### Prove that, closed ball is closed subset in $(X, d)$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Suppose $D(x_0,r)$ is a closed ball. We show that $X∖D(x_0,r)$ is open. In other words, for every point $y∈X∖D(x0,r)$ we need to find an open ball contained in $X∖D$ with center $y$.\n",
+    "\n",
+    "Since $y∈X∖D(x_0,r)$, it follows that $d(y,x_0)>r$, so $d(y,x_0)−r>0$. Let $r1=d(y,x0)−r$.\n",
+    "\n",
+    "Let's say that the open ball $B(y,r_1)$ is contained in $X∖D(x0,r)$. To prove this, consider any $z∈B(y,r1)$. \n",
+    "\n",
+    "By the triangle inequality\n",
+    "\n",
+    "$d(x_0,y)≤d(x_0,z)+d(z,y)$ => $d(z,x_0)≥d(x_0,y)−d(z,y)>d(x_0,y)−r_1=r.\n",
+    "\n",
+    "This shows $z∈X∖D(x_0,r)$, which completes the proof."
    ]
   },
   {
@@ -96,8 +133,18 @@
     "For every metric space (X, d):\n",
     "- For eny $\\mathcal{F} = \\{F | F$ is closed in $(X, d)\\}$ holds $\\bigcap_{F \\in \\mathcal{F}} F$ is closed in $(X, d)$\n",
     "- For eny two $F_1, F_2 \\subset X$ closed in $(X, d)$ holds: $F_1 \\cup F_2$ is closed in $(X, d)$\n",
+    "\n",
+    "\n",
     "- $X$ is closed in $(X, d)$\n",
-    "- $\\emptyset$ is closed in $(X, d)$"
+    "\n",
+    "\n",
+    "Any accumulation is a point in X, so X contains all of its accumulation points.\n",
+    "\n",
+    "\n",
+    "- $\\emptyset$ is closed in $(X, d)$\n",
+    "\n",
+    "Since ∅ contains no sequences, it contains all of its accumulation points, which in total there is none. Hence ∅ is closed.\n",
+    "\n"
    ]
   },
   {
@@ -105,14 +152,21 @@
    "metadata": {},
    "source": [
     "#### Prove that:\n",
-    "- For eny finity set $(F)_{i=1}^{n}$ of closed sets in $(X, d)$, $\\bigcup_{i=1}^{n}F$ is closed in $(X, d)$"
+    "- For any finity set $(F)_{i=1}^{n}$ of closed sets in $(X, d)$, $\\bigcup_{i=1}^{n}F$ is closed in $(X, d)$\n",
+    "\n",
+    "\n",
+    "By De Morgan's law, $(\\bigcup F)^c = \\bigcap F^c = B$. \n",
+    "\n",
+    "Where $B$ is a finite intersection of open sets, which is open. Therefore the $\\bigcup F$ is closed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prove that, if $F \\subset X$ is closed then $X - F$ is open in $(X, d)$ "
+    "#### Prove that, if $F \\subset X$ is closed then $X - F$ is open in $(X, d)$ \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -128,6 +182,10 @@
    "source": [
     "#### Prove that:\n",
     "- for every $u, v \\in \\mathbb{R}^{n}$: $d(u, v) \\geq 0$\n",
+    "\n",
+    "From triangle inequality, $d(u,u) \\geq d(u,v) + d(v,u) = 2d(u,v)$ but $d(u,u) = 0$, which proves the statement.\n",
+    "\n",
+    "\n",
     "- for every $v \\in \\mathbb{R}^{n}$: $d(v, v) = 0$\n",
     "- for every $u, v \\in \\mathbb{R}^{n}$: $d(u, v) = d(v, u)$ (symmetry)\n",
     "- for every $u, v, w \\in \\mathbb{R}^{n}$: $d(u, w) \\leq d(v, u) + d(v, w)$ (triangle inequality)"
@@ -239,7 +297,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prove that any composition of continous functions is continous"
+    "#### Prove that any composition of continous functions is continous\n",
+    "\n",
+    "\n",
+    "It will be shown that the limit of $f(g(x))$ at any arbitrary point $x=a$ in the domain of $f(g(x))$ is equal to $f(g(a))$\n",
+    "\n",
+    "Let $a_n$ be any convergent sequence such that $a_n→a$\n",
+    "\n",
+    "Since $g(x)$ is continuous, $g(a_n)→g(a)$ as $a_n→a$\n",
+    "    \n",
+    "Since $f(x)$ is continuous, $f(g(a_n))→f(g(a))$ as a_n→a$ as required.\n"
    ]
   },
   {
