--- a/homework/calculus-2-homework.ipynb
+++ b/homework/calculus-2-homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,14 @@
    "metadata": {},
    "source": [
     "#### Example:\n",
-    "$$f(x,y) = \\begin{cases}x & \\text{if }y \\ne x^2 \\\\ 0 & \\text{if }y = x^2\\end{cases}$$"
+    "$$f(x,y) = \\begin{cases}x & \\text{if }y \\ne x^2 \\\\ 0 & \\text{if }y = x^2\\end{cases}$$\n",
+    "\n",
+    "\n",
+    "Derivative by $x$ : $\\lim_{h \\to 0} \\frac{f(x+h,0)-f(x,0)}{h}=1$\n",
+    "\n",
+    "Derivative by $y$ : $\\lim_{h \\to 0} \\frac{f(0,y+h)-f(0,y)}{h}=0$\n",
+    "\n",
+    "Partial derivatives differ from each other, that means that the function is not differentiated"
    ]
   },
   {
@@ -55,8 +62,23 @@
    "metadata": {},
    "source": [
     "#### Example:\n",
-    "$$f(x,y) = \\begin{cases}y^3/(x^2+y^2) & \\text{if }(x,y) \\ne (0,0) \\\\ 0 & \\text{if }(x,y) = (0,0)\\end{cases}$$"
+    "$$f(x,y) = \\begin{cases}y^3/(x^2+y^2) & \\text{if }(x,y) \\ne (0,0) \\\\ 0 & \\text{if }(x,y) = (0,0)\\end{cases}$$\n",
+    "\n",
+    "$ x = r \\cos \\alpha , y = r \\sin \\alpha $ \n",
+    "\n",
+    "If we transfer the function to polar coordinates, we will get:\n",
+    "\n",
+    "$$ x = r \\cos(\\alpha), y = r\\sin(\\alpha).  $$$$f(r,\\alpha) = \\begin{cases}\\frac{ r^3\\sin^3(\\alpha)}{r^2} &amp; r \\gt 0 \\\\ 0 &amp; r = 0  \\end{cases} = \\begin{cases} r\\sin^3(\\alpha) &amp; r \\gt 0 \\\\ 0 &amp; r = 0  \\end{cases} $$\n",
+    "The derivative therefore is,$$ \\frac{\\partial f}{\\partial r} = \\lim_{h\\to 0}\\frac{(r+h-r)\\sin^3(\\alpha)}{h} = \\lim_{h\\to 0} \\sin^3(\\alpha)$$\n",
+    "We have got that the limit is dependent on $\\alpha$. And concequently derivative doesn't exist at $(0,0)$ point.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
