--- a/homework/linear_algebra-2-homework.ipynb
+++ b/homework/linear_algebra-2-homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,25 @@
     "#### Prove that:\n",
     "For every linear function $f:V \\to U$ between vector spaces $V$ and $U$ on the real numbers, every sequence of vectors $v_1, v_2, \\dots v_m \\in V$ and every scalars $a_1, a_2, \\dots, a_m \\in \\mathbb{R}$:\n",
     "<br>\n",
-    "$$f(a_1v_1 + a_2v_2 + \\dots + a_mv_m) = a_1f(v_1) + a_2f(v_2) + \\dots + a_mf(v_m)$$"
+    "$$f(a_1v_1 + a_2v_2 + \\dots + a_mv_m) = a_1f(v_1) + a_2f(v_2) + \\dots + a_mf(v_m)$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "We can use the induction method:\n",
+    "\n",
+    "for the first stage we have :\n",
+    "\n",
+    "$ f(a_1v_1 ) = a_1f(v_1) $ \t         ____  for   (n=1)\n",
+    "\n",
+    "\n",
+    " $ f(a_1v_1 + a_2v_2) = a_1f(v_1) + a_2f(v_2) $ \t ____   for  (n=2)\n",
+    "\n",
+    "Suppose statement remeins true for n =k\n",
+    "\n",
+    "Let’s prove for n = k+1\n",
+    "\n",
+    "$ f(a_1u_1+a_2u_2 + \\dots +a_ku_k + a_{k+1}u_{k+1})\n",
+    "= f(u + a_{k+1}u_{k+1}) = f(u) + a_{k+1}f(u_{k+1}) = a_1f(u_1) + \\dots a_kf(u_k) + a_{k+1}f(u_{k+1}) $\n"
    ]
   },
   {
