--- a/homework/probability-homework.ipynb
+++ b/homework/probability-homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,18 @@
    "metadata": {},
    "source": [
     "#### Prove that:\n",
-    "Composition of mesurable functions is a mesurable function"
+    "Composition of mesurable functions is a mesurable function\n",
+    "\n",
+    "\n",
+    "let $(E1,Tl),(E2,T2),(E3,T3)$ be three measurable spaces and $f:E1→E2$ and $g:E2→E3$ measurables functions.\n",
+    "\n",
+    "If X∈T3, then , by measurability of g we have : $g^−1(X)∈T2$ and by measurability of f we have $f^−1(g−1(X))∈T1$. \n",
+    "\n",
+    "Since $(g∘f)−1(X)=f^−1(g^−1(X))$ we have :\n",
+    "$∀X∈T3(g∘f)^−1(X)∈T1$\n",
+    "\n",
+    "This gives measurability of g∘f\n",
+    "\n"
    ]
   },
   {
@@ -64,7 +75,7 @@
     "#### Prove the following mesure properties:\n",
     "- if $A \\subset B$ then $\\mu(A) \\le \\mu(B)$\n",
     "<br>\n",
-    "Proof: $(B - A) \\cup (A \\cap B) = (B - A) \\cup A = B$ and $(B - A) \\cap (A \\cap B) = \\emptyset$ so $\\mu((B - A) \\cup (A \\cap B)) = \\mu(B - A) + \\mu(A \\cap B) = \\mu(B - A) + \\mu(A) = \\mu(B)$ so $\\mu(A) \\le \\mu(B)$"
+    "Proof: $(B - A) \\cup (A \\cap B) = (B - A) \\cup A = B$ and $(B - A) \\cap (A \\cap B) = \\emptyset$ so $\\mu((B - A) \\cup (A \\cap B)) = \\mu(B - A) + \\mu(A \\cap B) = \\mu(B - A) + \\mu(A) = \\mu(B)$ so $\\mu(A) \\le \\mu(B)$\n"
    ]
   },
   {
@@ -81,7 +92,19 @@
     "#### Prove that:\n",
     "For probability mesure $P$ and events $A, B, C \\subset \\Omega$\n",
     "- $P(A \\cup B) = P(A) + P(B) - P(A \\cap B)$\n",
-    "<br>"
+    "<br>\n",
+    "\n",
+    "\n",
+    "For any sets A and B, we have the disjoint union\n",
+    "$A∪B=(A−B)∪(A∩B)∪(B−A)$\n",
+    "\n",
+    "Then, by the axiom,\n",
+    "\n",
+    "$P(A∪B)=P(A−B)+P(A∩B)+P(B−A)$\n",
+    "\n",
+    "Since $P(A−B)=P(A)−P(A∩B)P(A−B)=P(A)−P(A∩B)$ and \n",
+    "\n",
+    "$P(B−A)=P(B)−P(A∩B)P(B−A)=P(B)−P(A∩B)$, the result follows.\n"
    ]
   },
   {
@@ -102,8 +125,22 @@
     "Assuming that expectation exists\n",
     "<br>\n",
     "Denoted by $\\sigma^2$\n",
-    "<br>"
+    "<br>\n",
+    "\n",
+    "\n",
+    "$\\sigma^2 =  \\operatorname{E}[X - \\operatorname{E}[X]]^2 = \\operatorname{E}[X^2 - 2 \\operatorname{E}[X]X + ( \\operatorname{E}[X])^2]$ =\n",
+    "\n",
+    "= $\\operatorname{E}[X])^2 - 2\\operatorname{E}[X] \\operatorname{E}[X] + (\\operatorname{E}[X])^2 $ =\n",
+    "\n",
+    "= $\\operatorname{E}[X^2] - (\\operatorname{E}[X])^2$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
