--- a/linear_algebra-2.ipynb
+++ b/linear_algebra-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "I"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,36 +111,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.47800237, 0.48328958, 0.43758714, 0.25274365, 0.14114745],\n",
+       "       [0.20346697, 0.66611035, 0.42656423, 0.3023954 , 0.52887578],\n",
+       "       [0.78502647, 0.20318883, 0.58738826, 0.03503152, 0.96717652],\n",
+       "       [0.02932586, 0.44456943, 0.91683806, 0.01760426, 0.68001922]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.58474924, 0.42881979, 0.98086823, 0.78218427],\n",
+       "       [0.10891706, 0.18805374, 0.42606587, 0.03189744],\n",
+       "       [0.91619676, 0.31022989, 0.21776876, 0.93335236],\n",
+       "       [0.26773961, 0.39280853, 0.00845269, 0.65121276],\n",
+       "       [0.69602212, 0.90569174, 0.95012412, 0.04880922],\n",
+       "       [0.62124524, 0.56527207, 0.16218612, 0.27301296]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.47800237, 0.48328958, 0.43758714, 0.25274365, 0.14114745],\n",
+       "       [0.20346697, 0.66611035, 0.42656423, 0.3023954 , 0.52887578],\n",
+       "       [0.78502647, 0.20318883, 0.58738826, 0.03503152, 0.96717652],\n",
+       "       [0.02932586, 0.44456943, 0.91683806, 0.01760426, 0.68001922]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "I @ A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.58474924, 0.42881979, 0.98086823, 0.78218427],\n",
+       "       [0.10891706, 0.18805374, 0.42606587, 0.03189744],\n",
+       "       [0.91619676, 0.31022989, 0.21776876, 0.93335236],\n",
+       "       [0.26773961, 0.39280853, 0.00845269, 0.65121276],\n",
+       "       [0.69602212, 0.90569174, 0.95012412, 0.04880922],\n",
+       "       [0.62124524, 0.56527207, 0.16218612, 0.27301296]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "B @ I"
    ]
@@ -140,9 +214,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.19784101, 0.00239892, 0.1011341 , 0.68947475, 0.25739494,\n",
+       "        0.8846124 , 0.45884436, 0.18857789],\n",
+       "       [0.43865274, 0.05103165, 0.27293569, 0.78383162, 0.42671225,\n",
+       "        0.61259587, 0.65667645, 0.14144054],\n",
+       "       [0.31144653, 0.35119327, 0.83292672, 0.40282958, 0.52461338,\n",
+       "        0.0453403 , 0.75861981, 0.50928015],\n",
+       "       [0.04980717, 0.6775104 , 0.53192422, 0.30424156, 0.2716044 ,\n",
+       "        0.01085153, 0.65617004, 0.32724558],\n",
+       "       [0.99457615, 0.7131318 , 0.09367465, 0.77377935, 0.30734202,\n",
+       "        0.48113609, 0.28383854, 0.03698739],\n",
+       "       [0.11795355, 0.62229926, 0.11120266, 0.22823088, 0.76286605,\n",
+       "        0.60873085, 0.67834816, 0.4194134 ],\n",
+       "       [0.1536622 , 0.06956304, 0.52214208, 0.72092113, 0.01959793,\n",
+       "        0.88976193, 0.24296623, 0.95862921],\n",
+       "       [0.31510605, 0.25275471, 0.83552748, 0.02323446, 0.36755216,\n",
+       "        0.65702317, 0.73577742, 0.88776879]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A = np.random.random(size=(8, 8))\n",
     "A"
@@ -150,9 +250,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.17064448,  3.00429561, -1.65240937, -0.19724229,  0.50057796,\n",
+       "        -0.08695643,  0.23089515,  0.98638635],\n",
+       "       [ 1.88645839, -2.61470274,  0.53563754,  0.74052283,  0.70051661,\n",
+       "         0.04432538, -0.33072793, -0.25738375],\n",
+       "       [ 7.87821564, -8.01914427,  5.44056059, -1.49957218,  0.92228527,\n",
+       "        -1.49900254, -1.72423263, -0.43252003],\n",
+       "       [-0.30684253,  0.63190634,  0.42384368,  0.21978471, -0.09692704,\n",
+       "        -0.0106585 ,  0.81086504, -1.2261703 ],\n",
+       "       [ 3.03266905, -3.73744631,  3.93369561, -2.54830818,  0.30160649,\n",
+       "         1.079718  , -0.58440457, -1.25761908],\n",
+       "       [ 4.8021383 , -4.2334675 ,  1.58886712, -0.71770775,  0.56185484,\n",
+       "        -0.44559583, -1.04716892,  0.32536517],\n",
+       "       [-5.94379588,  7.4438313 , -5.02445186,  2.61295238, -1.20815133,\n",
+       "         0.14835169,  0.49938519,  1.43677718],\n",
+       "       [-6.70166356,  5.71987876, -3.33777107,  0.68536339, -0.78197608,\n",
+       "         1.18911907,  2.21681299,  0.37783529]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "invA = np.linalg.inv(A)\n",
     "invA"
@@ -160,9 +286,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.00000000e+00  4.21077325e-16 -2.12161705e-16 -1.01716222e-15\n",
+      "  -2.65660129e-16 -1.53755103e-16 -4.02791493e-16 -6.92429561e-16]\n",
+      " [ 1.22210931e-15  1.00000000e+00  1.16902825e-15  2.46633106e-15\n",
+      "   1.22139482e-15  1.38221233e-15  1.96427775e-15  1.01481065e-15]\n",
+      " [ 1.07166995e-15  4.08577628e-16  1.00000000e+00  2.70027806e-15\n",
+      "   1.26973733e-15  7.05321659e-16  1.70764960e-15  2.22964836e-15]\n",
+      " [-4.90519573e-16 -1.80265213e-16 -5.92555297e-16  1.00000000e+00\n",
+      "  -5.53339577e-16 -4.59979759e-16 -8.91723368e-16 -5.53039896e-16]\n",
+      " [-3.46290507e-16 -2.51087047e-16 -2.08111650e-16 -5.62818013e-16\n",
+      "   1.00000000e+00 -5.37330455e-16 -1.01635759e-15  6.00521731e-16]\n",
+      " [ 3.06034712e-16 -2.17769899e-16  1.66730590e-16  1.03580475e-15\n",
+      "   2.68478229e-16  1.00000000e+00  2.67667565e-16  7.18711095e-16]\n",
+      " [-4.44089210e-16  0.00000000e+00 -8.88178420e-16 -1.77635684e-15\n",
+      "  -8.88178420e-16  0.00000000e+00  1.00000000e+00 -8.88178420e-16]\n",
+      " [-4.44089210e-16  2.22044605e-16  4.44089210e-16 -8.88178420e-16\n",
+      "   0.00000000e+00  8.88178420e-16  0.00000000e+00  1.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "Ia = invA @ A\n",
     "print(Ia)"
@@ -170,9 +319,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0., -0., -0., -0., -0., -0., -0.],\n",
+       "       [ 0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [-0., -0., -0.,  1., -0., -0., -0., -0.],\n",
+       "       [-0., -0., -0., -0.,  1., -0., -0.,  0.],\n",
+       "       [ 0., -0.,  0.,  0.,  0.,  1.,  0.,  0.],\n",
+       "       [-0.,  0., -0., -0., -0.,  0.,  1., -0.],\n",
+       "       [-0.,  0.,  0., -0.,  0.,  0.,  0.,  1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.round(Ia)"
    ]
@@ -206,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,9 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.90817776, 0.56933279, 0.38987906, 0.40786356, 0.17430175]),\n",
+       " array([0.18221826, 0.97522573, 0.09479471, 0.61190682, 0.36603965]),\n",
+       " 0.9545468396307104,\n",
+       " 0.6108079305117111,\n",
+       " array([0.97819857, 1.13913042, 0.43005919, 0.76308241, 0.38995911]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "u = np.random.random(5)\n",
     "v = np.random.random(5)\n",
@@ -503,9 +685,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1,  2,  3],\n",
+       "        [ 4,  5,  6],\n",
+       "        [ 7,  8,  9],\n",
+       "        [10, 11, 12]]), (4, 3))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]])\n",
     "A, A.shape"
@@ -513,9 +709,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.14087668,  0.82471435,  0.53358462,  0.12364244],\n",
+       "        [-0.34394629,  0.42626394, -0.8036038 ,  0.2328539 ],\n",
+       "        [-0.54701591,  0.02781353,  0.00645373, -0.83663514],\n",
+       "        [-0.75008553, -0.37063688,  0.26356544,  0.48013879]]),\n",
+       " array([2.54624074e+01, 1.29066168e+00, 1.38648772e-15]),\n",
+       " array([[-0.50453315, -0.5745157 , -0.64449826],\n",
+       "        [-0.76077568, -0.05714052,  0.64649464],\n",
+       "        [-0.40824829,  0.81649658, -0.40824829]]),\n",
+       " (4, 4),\n",
+       " (3,),\n",
+       " (3, 3))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "U, S, V_T = np.linalg.svd(A)\n",
     "U, S, V_T, U.shape, S.shape, V_T.shape"
@@ -523,9 +740,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[2.54624074e+01, 0.00000000e+00, 0.00000000e+00],\n",
+       "        [0.00000000e+00, 1.29066168e+00, 0.00000000e+00],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.38648772e-15]]), (3, 3))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Sg = np.diag(S)\n",
     "Sg, Sg.shape"
@@ -533,9 +763,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25.495097567963924, -0.0, 1.0, 1.7320508075688772)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.norm(A), np.round(U[:, 0] @ U[:, 1].T), np.linalg.norm(U[2, :]), np.linalg.norm(V_T)"
    ]
@@ -738,6 +979,15 @@
    "metadata": {},
    "source": [
     "[jupyter-notebook tips&tricks&shortcuts](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
    ]
   },
   {
